m3application-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: m3application
  name: m3application
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: m3application
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: m3application
    spec:
      containers:
        - env:
            - name: SPRING_KAFKA_BOOTSTRAPSERVERS
              value: kafka:29092
          image: m3application
          name: m3application
          ports:
            - containerPort: 8882
          resources: {}
      restartPolicy: Always
status: {}
