m3application-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: m3application
  name: m3application
spec:
  ports:
    - name: "8882"
      port: 8882
      targetPort: 8882
  selector:
    io.kompose.service: m3application
status:
  loadBalancer: {}
